api_versioned_docs/version-12.0.0-rc1/avalonia/controls/treedatagridcheckboxcolumn.mdx
---
title: 'TreeDataGridCheckBoxColumn'
hide_title: true
slug: '/avalonia/controls/treedatagridcheckboxcolumn'
uid: 'Avalonia.Controls.TreeDataGridCheckBoxColumn'
commentId: 'T:Avalonia.Controls.TreeDataGridCheckBoxColumn'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.TreeDataGrid'
assembly: 'Avalonia.Controls.TreeDataGrid'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">TreeDataGridCheckBoxColumn Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
</div>

<div className="apiref-page__lead">

A column in an [Avalonia.Controls.TreeDataGridSource](xref:Avalonia.Controls.TreeDataGridSource) which displays a check box.

</div>

<div className="apiref-page__signature">

```csharp
public class TreeDataGridCheckBoxColumn
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="../avaloniaobject">AvaloniaObject</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="treedatagridcolumn">TreeDataGridColumn</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="treedatagridboundcolumn">TreeDataGridBoundColumn</a> <span className="apiref-page__relation-separator">-&gt;</span> TreeDataGridCheckBoxColumn
</div>
</div>

## Remarks

The [Avalonia.Controls.TreeDataGridCheckBoxColumn](xref:Avalonia.Controls.TreeDataGridCheckBoxColumn) class provides a column that displays boolean values as
checkboxes in a [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid). It supports both two-state (checked/unchecked) and
three-state (checked/unchecked/indeterminate) checkbox behavior.

## Constructors

| Name | Description |
| --- | --- |
| [TreeDataGridCheckBoxColumn](#uid-bb09a25cf3) | Initializes a new instance of the [Avalonia.Controls.TreeDataGridCheckBoxColumn](xref:Avalonia.Controls.TreeDataGridCheckBoxColumn) class. |

<section className="apiref-page__member-entry">

<span id="uid-bb09a25cf3"></span>

### TreeDataGridCheckBoxColumn Constructor

Initializes a new instance of the [Avalonia.Controls.TreeDataGridCheckBoxColumn](xref:Avalonia.Controls.TreeDataGridCheckBoxColumn) class.

```csharp
public TreeDataGridCheckBoxColumn()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [Bind (8 overloads)](../avaloniaobject.mdx#uid-1c60c7bda3) | Binds a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) to an [Avalonia.Data.BindingBase](xref:Avalonia.Data.BindingBase). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CheckAccess](../avaloniaobject.mdx#uid-260ff7a68d) | Returns a value indicating whether the current thread is the UI thread. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [ClearValue (4 overloads)](../avaloniaobject.mdx#uid-41de208fbe) | Clears a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty)'s local value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CoerceValue](../avaloniaobject.mdx#uid-3bec32f39e) | Coerces the specified [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Equals](../avaloniaobject.mdx#uid-a8a8e94305) | Compares two objects using reference equality. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetBaseValue](../avaloniaobject.mdx#uid-9c615efbba) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetHashCode](../avaloniaobject.mdx#uid-7f7db1e7a2) | Gets the hash code for the object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetValue (3 overloads)](../avaloniaobject.mdx#uid-5142cd4792) | Gets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsAnimating](../avaloniaobject.mdx#uid-8cbfc7521a) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is animating. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsSet](../avaloniaobject.mdx#uid-f8bf0bbdcc) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is set on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetCurrentValue (2 overloads)](../avaloniaobject.mdx#uid-38759fd088) | Sets the value of a dependency property without changing its value source. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetValue (3 overloads)](../avaloniaobject.mdx#uid-47d14e19d7) | Sets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [VerifyAccess](../avaloniaobject.mdx#uid-3b9d3c9793) | Checks that the current thread is the UI thread and throws if not. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

## Properties

| Name | Description |
| --- | --- |
| [IsThreeState](#uid-9146b7b1da) | Gets or sets a value indicating whether the column displays a three-state checkbox. |
| [Binding](treedatagridboundcolumn.mdx#uid-c0678ca16e) | Gets or sets the binding which selects the column value from the model. Inherited from [TreeDataGridBoundColumn](treedatagridboundcolumn.mdx). |
| [IsReadOnly](treedatagridboundcolumn.mdx#uid-a7feb9feba) | Gets or sets a value indicating whether the column is readonly. Inherited from [TreeDataGridBoundColumn](treedatagridboundcolumn.mdx). |
| [ActualWidth](treedatagridcolumn.mdx#uid-f6a5b4a5e1) | Gets the actual width of the column after measurement. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [AllowTriStateSorting](treedatagridcolumn.mdx#uid-96d4d7c2ac) | Gets or sets whether the user can cycle through ascending, descending, and unsorted states when clicking the column header. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [BeginEditGestures](treedatagridcolumn.mdx#uid-8bbe396a27) | Gets or sets the gesture(s) that will cause a cell to enter edit mode. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [CanUserResize](treedatagridcolumn.mdx#uid-f144900437) | Gets or sets a value indicating whether the user can resize the column by dragging. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [CanUserSortColumn](treedatagridcolumn.mdx#uid-5736d9e2bb) | Gets or sets a value indicating whether the user can sort the column by clicking. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [CompareAscending](treedatagridcolumn.mdx#uid-c7f2a2dd78) | Gets or sets a custom comparison for ascending sort order. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [CompareDescending](treedatagridcolumn.mdx#uid-5452b638ce) | Gets or sets a custom comparison for descending sort order. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [Header](treedatagridcolumn.mdx#uid-e8ac01fc32) | Gets or sets the column header. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [IsVisible](treedatagridcolumn.mdx#uid-56b3ceb8c9) | Gets or sets a value indicating whether the column is visible. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [MaxWidth](treedatagridcolumn.mdx#uid-86cf116775) | Gets or sets the maximum width for the column. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [MinWidth](treedatagridcolumn.mdx#uid-02e431a650) | Gets or sets the minimum width for the column. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [SortDirection](treedatagridcolumn.mdx#uid-2ec9c41915) | Gets or sets the sort direction indicator that will be displayed on the column. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [Tag](treedatagridcolumn.mdx#uid-1da1891e70) | Gets or sets a user-defined object attached to the column. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [Width](treedatagridcolumn.mdx#uid-e2a65dc530) | Gets or sets the width of the column. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [Dispatcher](../avaloniaobject.mdx#uid-b25fa51632) | Returns the [Avalonia.AvaloniaObject.Dispatcher](xref:Avalonia.AvaloniaObject.Dispatcher) that this [Avalonia.AvaloniaObject](xref:Avalonia.AvaloniaObject) is associated with. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Item](../avaloniaobject.mdx#uid-c1d1f1bc0f) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-9146b7b1da"></span>

### IsThreeState Property

Gets or sets a value indicating whether the column displays a three-state checkbox.

```csharp
public bool IsThreeState { get; set; }
```

</section>

## Fields

| Name | Description |
| --- | --- |
| [IsThreeStateProperty](#uid-4ae95ce676) | Defines the [Avalonia.Controls.TreeDataGridCheckBoxColumn.IsThreeState](xref:Avalonia.Controls.TreeDataGridCheckBoxColumn.IsThreeState) property. |
| [BindingProperty](treedatagridboundcolumn.mdx#uid-ed4b06fd8b) | Defines the [Avalonia.Controls.TreeDataGridBoundColumn.Binding](xref:Avalonia.Controls.TreeDataGridBoundColumn.Binding) property. Inherited from [TreeDataGridBoundColumn](treedatagridboundcolumn.mdx). |
| [IsReadOnlyProperty](treedatagridboundcolumn.mdx#uid-74e252a9be) | Defines the [Avalonia.Controls.TreeDataGridBoundColumn.IsReadOnly](xref:Avalonia.Controls.TreeDataGridBoundColumn.IsReadOnly) property. Inherited from [TreeDataGridBoundColumn](treedatagridboundcolumn.mdx). |
| [ActualWidthProperty](treedatagridcolumn.mdx#uid-e364c8be18) | Defines the [Avalonia.Controls.TreeDataGridColumn.ActualWidth](xref:Avalonia.Controls.TreeDataGridColumn.ActualWidth) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [AllowTriStateSortingProperty](treedatagridcolumn.mdx#uid-6ae1bb0dd4) | Defines the [Avalonia.Controls.TreeDataGridColumn.AllowTriStateSorting](xref:Avalonia.Controls.TreeDataGridColumn.AllowTriStateSorting) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [BeginEditGesturesProperty](treedatagridcolumn.mdx#uid-dc2ed09efd) | Defines the [Avalonia.Controls.TreeDataGridColumn.BeginEditGestures](xref:Avalonia.Controls.TreeDataGridColumn.BeginEditGestures) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [CanUserResizeProperty](treedatagridcolumn.mdx#uid-571bbcdf1a) | Defines the [Avalonia.Controls.TreeDataGridColumn.CanUserResize](xref:Avalonia.Controls.TreeDataGridColumn.CanUserResize) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [CanUserSortColumnProperty](treedatagridcolumn.mdx#uid-7b60725c11) | Defines the [Avalonia.Controls.TreeDataGridColumn.CanUserSortColumn](xref:Avalonia.Controls.TreeDataGridColumn.CanUserSortColumn) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [CompareAscendingProperty](treedatagridcolumn.mdx#uid-b64fb913c3) | Defines the [Avalonia.Controls.TreeDataGridColumn.CompareAscending](xref:Avalonia.Controls.TreeDataGridColumn.CompareAscending) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [CompareDescendingProperty](treedatagridcolumn.mdx#uid-8793ea737f) | Defines the [Avalonia.Controls.TreeDataGridColumn.CompareDescending](xref:Avalonia.Controls.TreeDataGridColumn.CompareDescending) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [HeaderProperty](treedatagridcolumn.mdx#uid-6bf85e990c) | Defines the [Avalonia.Controls.TreeDataGridColumn.Header](xref:Avalonia.Controls.TreeDataGridColumn.Header) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [IsVisibleProperty](treedatagridcolumn.mdx#uid-3b84d0d8ca) | Defines the [Avalonia.Controls.TreeDataGridColumn.IsVisible](xref:Avalonia.Controls.TreeDataGridColumn.IsVisible) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [MaxWidthProperty](treedatagridcolumn.mdx#uid-dc42964fc0) | Defines the [Avalonia.Controls.TreeDataGridColumn.MaxWidth](xref:Avalonia.Controls.TreeDataGridColumn.MaxWidth) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [MinWidthProperty](treedatagridcolumn.mdx#uid-1ded2efd51) | Defines the [Avalonia.Controls.TreeDataGridColumn.MinWidth](xref:Avalonia.Controls.TreeDataGridColumn.MinWidth) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [SortDirectionProperty](treedatagridcolumn.mdx#uid-0a0a137fb0) | Defines the [Avalonia.Controls.TreeDataGridColumn.SortDirection](xref:Avalonia.Controls.TreeDataGridColumn.SortDirection) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [TagProperty](treedatagridcolumn.mdx#uid-c2056b364a) | Defines the [Avalonia.Controls.TreeDataGridColumn.Tag](xref:Avalonia.Controls.TreeDataGridColumn.Tag) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |
| [WidthProperty](treedatagridcolumn.mdx#uid-b2aa823419) | Defines the [Avalonia.Controls.TreeDataGridColumn.Width](xref:Avalonia.Controls.TreeDataGridColumn.Width) property. Inherited from [TreeDataGridColumn](treedatagridcolumn.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-4ae95ce676"></span>

### IsThreeStateProperty Field

Defines the [Avalonia.Controls.TreeDataGridCheckBoxColumn.IsThreeState](xref:Avalonia.Controls.TreeDataGridCheckBoxColumn.IsThreeState) property.

```csharp
public Avalonia.StyledProperty<bool> IsThreeStateProperty
```

</section>

## Events

| Name | Description |
| --- | --- |
| [PropertyChanged](../avaloniaobject.mdx#uid-d758e26fae) | Raised when a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value changes on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

</ApiRefPage>

